--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <textarea name="assunto" id="assunto"></textarea>
                     </label>
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/Portfolio2/obrigado.html">
+                    <input type="hidden" name="_next" value="https://eduardo-loff.github.io/Portfolio/obrigado">
                     <button type="submit" class="cbutton" id="cbutton">
                         Enviar
                     </button>
