--- a/obrigado.html
+++ b/obrigado.html
@@ -18,7 +18,7 @@
     <div class="agradecimento">
         <h1>Obrigado!</h1>
         <p>Sua resposta foi enviada com sucesso, retorne para a pagina principal:</p>
-        <a href="index.html"><button>RETORNAR</button></a>
+        <a href="https://eduardo-loff.github.io/Portfolio/"><button>RETORNAR</button></a>
     </div>
 </body>
 </html>
