--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Eduardo Felipe Butner Loff">
+    <meta name="keywords" content="">
 
     <!-- ESTILOS -->
     <link rel="stylesheet" href="CSS/index.css">
@@ -86,6 +87,17 @@
                     </svg>
                 </div>
             </div>
+            <div class="hcard">
+                <div class="htext">
+                    <h3>Microcontroladores</h3>
+                    <p>Programação em C/C++, voltada a microcontroladores como Arduino e ESP-32.</p>
+                </div>
+                <div class="hicon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" viewBox="0 0 512 512">
+                        <path d="M176 24c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40c-35.3 0-64 28.7-64 64l-40 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l40 0 0 56-40 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l40 0 0 56-40 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l40 0c0 35.3 28.7 64 64 64l0 40c0 13.3 10.7 24 24 24s24-10.7 24-24l0-40 56 0 0 40c0 13.3 10.7 24 24 24s24-10.7 24-24l0-40 56 0 0 40c0 13.3 10.7 24 24 24s24-10.7 24-24l0-40c35.3 0 64-28.7 64-64l40 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-40 0 0-56 40 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-40 0 0-56 40 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-40 0c0-35.3-28.7-64-64-64l0-40c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40-56 0 0-40c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 40-56 0 0-40zM160 128l192 0c17.7 0 32 14.3 32 32l0 192c0 17.7-14.3 32-32 32l-192 0c-17.7 0-32-14.3-32-32l0-192c0-17.7 14.3-32 32-32zm192 32l-192 0 0 192 192 0 0-192z"/>
+                    </svg>
+                </div>
+            </div>            
 
 
         </div>
@@ -109,6 +121,22 @@
                         <a href="https://github.com/Eduardo-Loff/ClimaEFL" target="_blank"><button>VER MAIS.</button></a>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <div class="pbox">
+            <div class="pcards2">
+                <div class="ptext">
+                    <h3>Irrigação Arduino!</h3>
+                    <p>Um prototipo de uma irrigação automática e eficiente. Utilizando de um sensor de umidade do solo para monitorar os níveis de umidade e ativar a bomba d'água apenas quando for necessário. O projeto utiliza de programação em C++ com comunicação Serial para visualização dos dados em tempo real. Uma solução simples, ideal para automação de jardins e pequenas hortas.</p>
+                    <div class="pbutton2">
+                        <a href="https://www.tinkercad.com/things/5ruA8W3B8wP-prototipo-irrigacao?sharecode=bBuY26cKRh0O_V8H9iTSXdP2LrYaJxGFBRTo02hPYB4" target="_blank"><button>VER MAIS.</button></a>
+                    </div>
+                </div>
+                <div class="pfoto">
+                    <img src="Assests/projeto_002.png" alt="" width="600px" height="300px">
+                </div>
+
             </div>
         </div>
     
